--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "mongoose": "^7.2.0",
+    "nodemon": "^2.0.22",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
