--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "communication",
+  "name": "docker",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,28 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.4.0",
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^7.2.0",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.22",
-    "uuid": "^9.0.0"
-  },
-  "devDependencies": {
-    "jest": "^29.5.0",
-    "supertest": "^6.3.3"
-  },
-  "jest": {
-    "testEnvironment": "node",
-    "coveragePathIgnorePatterns": [
-      "/node_modules/"
-    ]
-  },
-  "scripts": {
-    "start": "nodemon app.js",
-    "test": "jest"
+    "mongodb": "^5.5.0",
+    "mongoose": "^7.2.0"
   }
 }
