--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.2",
     "jest": "^29.5.0",
     "supertest": "^6.3.3"
   },
