--- a/package.json
+++ b/package.json
@@ -15,15 +15,19 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jq": "^1.7.2",
     "mongoose": "^7.2.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
+    "pino": "^8.14.1",
+    "pino-multi-stream": "^6.0.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "jest": "^29.5.0",
+    "pino-pretty": "^10.0.0",
     "supertest": "^6.3.3"
   },
   "jest": {
