--- a/package.json
+++ b/package.json
@@ -21,18 +21,19 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jq": "^1.7.2",
-    "mongoose": "^7.2.0",
+    "mongoose": "^7.2.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
+    "open": "^9.1.0",
     "pino": "^8.14.1",
     "pino-colada": "^2.2.2",
     "pino-multi-stream": "^6.0.0",
-    "open": "^9.1.0",
+    "swagger-autogen": "^2.23.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.3",
     "uuid": "^9.0.0",
-    "yamljs": "^0.3.0",
-    "winston": "^3.9.0"
+    "winston": "^3.9.0",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "eslint": "^8.2.0",
@@ -40,8 +41,7 @@
     "eslint-plugin-import": "^2.25.2",
     "jest": "^29.5.0",
     "pino-pretty": "^10.0.0",
-    "supertest": "^6.3.3",
-    "swagger-autogen": "^2.23.1"
+    "supertest": "^6.3.3"
   },
   "jest": {
     "testEnvironment": "node",
