--- a/package.json
+++ b/package.json
@@ -7,29 +7,42 @@
     "test": "jest",
     "start": "node app.js",
     "lint": "eslint . --ext .js,.ts",
-    "lint:fix": "eslint . --ext .js,.ts --fix"
+    "lint:fix": "eslint . --ext .js,.ts --fix",
+    "swagger-autogen": "node swagger.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
+    "chalk": "^2.4.2",
+    "colorize": "^0.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jq": "^1.7.2",
     "mongoose": "^7.2.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
+    "open": "^9.1.0",
+    "pino": "^8.14.1",
+    "pino-colada": "^2.2.2",
+    "pino-multi-stream": "^6.0.0",
+    "swagger": "^0.7.5",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.3",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "winston": "^3.9.0",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.2",
     "jest": "^29.5.0",
-    "supertest": "^6.3.3"
+    "pino-pretty": "^10.0.0",
+    "supertest": "^6.3.3",
+    "swagger-autogen": "^2.23.1"
   },
   "jest": {
     "testEnvironment": "node",
