--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,33 +1,21 @@
 {
-    "env": {
-        "browser": true,
-        "commonjs": true,
-        "es2021": true
-    },
-    // "extends": "eslint:recommended",
-    "extends": "airbnb-base",
-    "overrides": [
-    ],
-    "parserOptions": {
-        "ecmaVersion": "latest"
-    },
-    "rules": {
-        // "indent": [
-        //     "error",
-        //      "tab"
-        // ],
-        "linebreak-style": [
-            "error",
-            "windows"
-        ],
-        "quotes":[
-            "error", 
-            "single"
-        ],
-        "semi":[
-            "error", 
-            "always"
-        ]
-            
-    }
+  "env": {
+    "browser": true,
+    "commonjs": true,
+    "es2021": true
+  },
+  // "extends": "eslint:recommended",
+  "extends": "airbnb-base",
+  "overrides": [
+  ],
+  "parserOptions": {
+    "ecmaVersion": "latest"
+  },
+  "rules": {
+    "indent": [ "error", "2"],
+    "linebreak-style": ["error", "windows"],
+    "quotes":["error", "single"],
+    "semi":["error", "always"],
+    "import/extensions": ["error", "always"]            
+  }
 }
