--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
+    "amqplib": "^0.10.3",
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "chalk": "^2.4.2",
