--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jq": "^1.7.2",
     "mongoose": "^7.2.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.4",
     "nodemon": "^2.0.22",
     "open": "^9.1.0",
     "pino": "^8.14.1",
